update: dashboard ui charts!

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack serve --hot --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"    
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "chart.js": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
