fix: env variable syntax!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,4 @@ spring.jpa.hibernate.ddl-auto = update
 
 spring.datasource.url = jdbc:postgresql://dpg-ckgf00a12bvs73eq504g-a.singapore-postgres.render.com/userdb_pn8v
 spring.datasource.username=userdb_pn8v_user
-spring.datasource.password=${USERDB_PASSWORD}
-
+spring.datasource.password = System.getEnv(USERDB_PASSWORD)
