fix: postgres dialect hibernate config!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url = jdbc:postgresql://dpg-ckgf00a12bvs73eq504g-a.singapore-postgres.render.com/userdb_pn8v
 spring.datasource.username=userdb_pn8v_user
 spring.datasource.password = System.getEnv(USERDB_PASSWORD)
