--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^1.5.1",
     "chart.js": "^4.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1"
   }
 }
